@startuml


class Game {

__
GameStatus

EndingCriteria
(GameTitle)
(GameDescription)
GameInitiationTime
GameStartTime
GameEndTime
 }

Game "n" *-- "PlayerCount" Player : PlayingOrdering
(Game, Player) .. PlayersGame


class PlayersGame {
__
OrderNo
PlayerStatus
PlayersLink
}

Game "1 - GameInitiator" *-- "1" Player: InitiatesGame

Game "1" o-- "PlayerCount" Story: StoryList

class Player {
__
Email
(NickName)
}


class Story {
___
StoryOrderNumber
StoryStatus
/LastLine
/LastStoryPart

}

Story "1"--"1" Player: CurrentPlayer


Story "1" *-- "n" Part
class Part {

__
PartOrderNumber
Line1
Line2
Line3
/Completed
/LastLine

}

Part "1" <-- "1" Player : Writer
@enduml
